makko/csgo-hvh/cssbans/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cssbans
  labels:
    app: cssbans
spec:
  selector:
    app: cssbans
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
