makko/csgo-hvh/cssbans/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cssbans
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "hvh.senk0.com"
  rules:
    - backendRefs:
        - name: cssbans
          port: 8080
